--- a/src/components/divider.css
+++ b/src/components/divider.css
@@ -8,7 +8,7 @@
 .divider::after {
   content: "";
   flex: 1 1 auto;
-  border-bottom: 5px solid blue;
+  border-bottom: 5px solid lightgray;
   border-radius: 5px;
   margin: auto;
 }
